Initialized DB (postgresql)  communication

--- a/server-todo-list/src/main/resources/application.properties
+++ b/server-todo-list/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=server-todo-list
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/database_note
+spring.datasource.username=cedric
+spring.datasource.password=pwd
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
