rename note to task in back-end

--- a/server-todo-list/src/main/resources/application.properties
+++ b/server-todo-list/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=server-todo-list
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/database_note
+spring.datasource.url=jdbc:postgresql://localhost:5432/database_task
 spring.datasource.username=cedric
 spring.datasource.password=pwd
 
