--- a/client-todo-list/package.json
+++ b/client-todo-list/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "eslint '**/*.ts'",
+    "format": "prettier --write '**/*.ts'"
   },
   "private": true,
   "dependencies": {
@@ -30,6 +32,8 @@
     "@typescript-eslint/eslint-plugin": "^8.35.0",
     "@typescript-eslint/parser": "^8.35.0",
     "eslint": "^9.29.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.5.1",
     "globals": "^16.2.0",
     "jasmine-core": "~5.7.0",
     "karma": "~6.4.0",
@@ -37,6 +41,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "prettier": "^3.6.2",
     "typescript": "~5.8.2",
     "typescript-eslint": "^8.35.0"
   }
